--- a/app/src/main/res/layout/rv_multi_images.xml
+++ b/app/src/main/res/layout/rv_multi_images.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="@dimen/_200sdp"
+    android:layout_height="@dimen/_200sdp"
+    android:layout_margin="2dp">
 
     <ImageView
         android:id="@+id/ivImage"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
+        android:layout_width="@dimen/_200sdp"
+        android:layout_height="@dimen/_200sdp"
+        android:scaleType="fitXY"
         android:src="@drawable/add_pic" />
 
     <ImageView
@@ -16,6 +17,5 @@
         android:layout_height="@dimen/_25sdp"
         android:layout_alignParentEnd="true"
         android:padding="@dimen/_2sdp"
-        android:src="@drawable/delet"
-        android:visibility="gone" />
+        android:src="@drawable/delet" />
 </RelativeLayout>
