--- a/app/src/main/res/layout/activity_category_detail.xml
+++ b/app/src/main/res/layout/activity_category_detail.xml
@@ -10,7 +10,7 @@
     tools:context=".ui.main.ui.category_detail.CategoryDetailActivity">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="@drawable/bg_half"
         android:orientation="vertical">
         <RelativeLayout
@@ -34,6 +34,7 @@
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginTop="-25dp"
             android:layout_marginEnd="@dimen/_10sdp"
+            android:id="@+id/layout"
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="@dimen/_10sdp"
             app:cardUseCompatPadding="true">
@@ -43,6 +44,7 @@
                 android:fillViewport="true">
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
+
                     android:layout_height="wrap_content">
                     <TextView
                         android:id="@+id/tv_description"
@@ -61,7 +63,15 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </ScrollView>
         </androidx.cardview.widget.CardView>
-
+        <TextView
+            android:id="@+id/nodataFound"
+            style="@style/TextRegularFont"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_60sdp"
+            android:text="@string/nodatafound"
+            android:visibility="gone"
+            android:layout_gravity="center"/>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_addRecord"
             android:layout_width="match_parent"
@@ -70,7 +80,7 @@
             android:orientation="vertical"
 
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/add_record_layout" />
+             />
 
     </LinearLayout>
     <ImageView
