--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -34,7 +34,7 @@
                     android:layout_width="@dimen/_150sdp"
                     android:layout_height="@dimen/_150sdp"
                     android:contentDescription="@string/image"
-                    android:src="@drawable/pet_pic" />
+                    android:src="@drawable/place_holder" />
 
                 <ImageView
                     android:id="@+id/ivCamera"
