--- a/app/src/main/res/layout/activity_my_pet_profile.xml
+++ b/app/src/main/res/layout/activity_my_pet_profile.xml
@@ -89,6 +89,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:layout_marginTop="@dimen/_10sdp">
 
                 <TextView
