--- a/app/src/main/res/layout/fragment_calender.xml
+++ b/app/src/main/res/layout/fragment_calender.xml
@@ -159,17 +159,36 @@
                     android:textSize="@dimen/_9sdp" />
 
             </LinearLayout>
+      <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="@dimen/_10sdp"
+          android:weightSum="1"
+          >
+
 
             <TextView
                 style="@style/WrapTextView"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
                 android:fontFamily="@font/opensans_bold"
-                android:gravity="center"
-                android:text="@string/appointments" />
+                android:gravity="start"
+                android:layout_weight="0.8"
+                android:text="@string/reminders" />
+
+          <TextView
+              android:id="@+id/viewAll"
+
+              android:layout_width="0dp"
+              android:layout_weight="0.2"
+              android:layout_height="wrap_content"
+              android:textColor="@color/colorPrimary"
+
+              android:gravity="end"
+              android:text="@string/view_all" />
 
 
+      </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -215,7 +234,7 @@
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:fontFamily="@font/opensans_bold"
                     android:gravity="center_horizontal"
-                    android:text="@string/tap_plus_button"
+                    android:text="@string/tap_plus_button1"
                     android:textColor="@color/lightGrayA3A3A3"
                     android:textSize="@dimen/_10sdp" />
 
