--- a/app/src/main/res/layout/item_weight.xml
+++ b/app/src/main/res/layout/item_weight.xml
@@ -1,46 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/_8sdp"
-    android:orientation="horizontal"
-    android:weightSum="4">
-    <TextView
-        android:id="@+id/tvWeight"
-        style="@style/WrapTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:fontFamily="@font/opensans_semibold"
-        android:gravity="center"
-        android:text="110 lbs"
-        android:textSize="@dimen/_10sdp" />
-    <TextView
-        android:id="@+id/tvAge"
-        style="@style/WrapTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="2 Yr"
-        android:textSize="@dimen/_10sdp" />
-    <TextView
-        android:id="@+id/tvDate"
-        style="@style/WrapTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="02/07/2021"
-        android:textSize="@dimen/_10sdp" />
-    <TextView
-        android:id="@+id/tvTime"
-        style="@style/WrapTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="10:00 pm"
-        android:textSize="@dimen/_10sdp" />
+    android:layout_marginStart="@dimen/_2sdp"
+    android:layout_marginEnd="@dimen/_1sdp"
+    android:layout_marginBottom="@dimen/_10sdp">
 
-</LinearLayout>
+<!--    <com.puppypedia.utils.helper.others.SwipeRevealLayout-->
+<!--        android:id="@+id/swipeLayout"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="center_vertical"-->
+<!--        app:dragFromEdge="right"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toEndOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent">-->
+
+
+<!--        <LinearLayout-->
+<!--            android:id="@+id/llDelete"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_marginStart="@dimen/_5sdp"-->
+<!--            android:visibility="gone"-->
+<!--            android:gravity="center_vertical|end">-->
+
+<!--            <ImageButton-->
+<!--                android:id="@+id/ivDelete1"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_marginEnd="@dimen/_6sdp"-->
+<!--                android:background="@color/white"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center_vertical|end"-->
+<!--                android:layout_marginTop="@dimen/_4sdp"-->
+<!--                app:srcCompat="@drawable/ic_delete" />-->
+
+<!--        </LinearLayout>-->
+
+    <LinearLayout
+        android:id="@+id/viewForeground"
+        android:layout_width="match_parent"
+        android:layout_marginBottom="@dimen/_8sdp"
+        android:layout_height="wrap_content"
+
+        android:background="@drawable/bg_background"
+        android:padding="@dimen/_6sdp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:orientation="horizontal"
+        android:weightSum="4">
+
+        <TextView
+            android:id="@+id/tvWeight"
+            style="@style/WrapTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:fontFamily="@font/opensans_semibold"
+            android:gravity="center"
+            android:text="110 lbs"
+            android:textSize="@dimen/_9sdp" />
+
+        <TextView
+            android:id="@+id/tvAge"
+            style="@style/WrapTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="2 Yr"
+            android:textSize="@dimen/_9sdp" />
+
+        <TextView
+            android:id="@+id/tvDate"
+            style="@style/WrapTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="02/07/2021"
+            android:textSize="@dimen/_9sdp" />
+
+        <TextView
+            android:id="@+id/tvTime"
+            style="@style/WrapTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="10:00 pm"
+            android:textSize="@dimen/_9sdp" />
+        <ImageButton
+            android:id="@+id/ivDelete"
+            android:layout_width="wrap_content"
+            android:layout_marginEnd="@dimen/_3sdp"
+            android:background="@color/white"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|end"
+
+            app:srcCompat="@drawable/ic_delete" />
+    </LinearLayout>
+
+<!--    </com.puppypedia.utils.helper.others.SwipeRevealLayout>-->
+
+</androidx.constraintlayout.widget.ConstraintLayout>
