--- a/app/src/main/res/layout/item_weight.xml
+++ b/app/src/main/res/layout/item_weight.xml
@@ -53,7 +53,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:orientation="horizontal"
-        android:weightSum="4">
+        android:weightSum="3">
 
         <TextView
             android:id="@+id/tvWeight"
@@ -93,6 +93,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
+            android:visibility="gone"
             android:text="10:00 pm"
             android:textSize="@dimen/_9sdp" />
         <ImageButton
